# FastAPI

./: Dockerfile  docker-compose.yaml  pyproject.toml
api/: main.py
api/cruds/: __init__.py
api/models/: __init__.py
api/routers/: __init__.py  done.py  task.py
api/schemas/: __init__.py  tasks.py
